# macbot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: install.sh  install_models.sh  install_whispercpp.sh  run.sh
scripts/launchd/: com.evertjan.agent.plist
src/agent/: __init__.py  app.py  config.py  router.py  security.py
src/agent/providers/: __init__.py  api.py  ollama.py
src/agent/skills/: __init__.py  stt_whispercpp.py
src/agent/storage/: state.py
tests/: test_router.py  test_security.py
